# AhTomEngine

./: .gitignore  .gitmodules  AhTomEngine.sln  CMakeLists.txt  compile_shader.bat  compile_shader.sh  main.cpp  main.h.in
AhTomEngine/: AhTomEngine.vcxproj  AhTomEngine.vcxproj.filters  Main.cpp  PixelShader.hlsl  VertexShader.hlsl
shaders/: triangle.vert
src/Core/: AhtomEngine.cpp  AhtomEngine.h  AhtomEngine.ixx
src/Core/Misc/: BufferUtils.h  FileIO.h  FileIO.ixx  ImageUtils.h  ImageUtils.ixx  VulkanDebug.h  VulkanDebug.ixx  VulkanDevice.h  VulkanDevice.ixx  VulkanHelper.h  VulkanHelper.ixx
src/Core/Shader/: ShaderUtils.h  ShaderUtils.ixx
src/Core/Types/: AhtomDescriptor.ixx  AhtomDevice.ixx  AhtomGraphicsPipeline.ixx  AhtomInstance.ixx  AhtomRenderPass.ixx  AhtomSwapChain.ixx  AhtomWindow.ixx  EngineTypes.ixx  UniformBufferObject.h  Vertex.h  Vertex.ixx
src/Core/engine/: AhTomDefines.h  AhTomLogicalDevice.cpp  AhTomLogicalDevice.h  AhTomPhysicalDevice.cpp  AhTomPhysicalDevice.h  AhTomSwapChain.cpp  AhTomSwapChain.h  AhTomWindowSurface.cpp  AhTomWindowSurface.h
src/Core/vulkan/: VkDebugSupport.cpp  VkValidationLayerSupport.h
src/core/: AhtomEngine.cpp  AhtomEngine.h
src/core/engine/: AhTomGraphicsPipeline.cpp  AhTomGraphicsPipeline.h  AhTomLogicalDevice.cpp  AhTomLogicalDevice.h  AhTomPhysicalDevice.cpp  AhTomPhysicalDevice.h  AhTomSwapChain.cpp  AhTomSwapChain.h
src/core/utils/: FileUtils.h
src/core/vulkan/: VKExtensionSupport.h  VkDebugSupport.h  VkShaderSupport.h
src/types/: AhTomTypes.h
